# nrm-core

./: -  .gitignore  .gitlab-ci.dhall  .gitlab-ci.yml  .gitmodules  .hlint.yaml  .readthedocs.yml  AUTHORS.md  LICENSE  Makefile  README.md  TODO.md  build.sh  cabal.dh  cabal.project  cachepush.sh  ci  ci.sh  copy-closure.sh  debug.hs  debug1.hs  default.nix  deploy  deploy.sh  deploy_g5k.sh  deploy_nix.sh  hbandit.cabal  hbandit.dhall  hbandit.nix  hie.yaml  hlint.yaml  hnrm.cabal  hnrm.dhall  hydra.nix  install.sh  lab.sh  pre-commit  pre-commit.sh  pre-merge.sh  release.nix  (+10 more)
hbandit/: .gitlab-ci.yml  Makefile  README.md  default.nix  hbandit.cabal  hbandit.dhall  hbandit.nix  hie.yaml  shell.nix
hbandit/literate/: .gitignore  refs.bib  tutorial.md
hbandit/src/: Bandit.hs
hbandit/src/Bandit/: Class.hs  EpsGreedy.hs  Exp3.hs  Exp4R.hs  Types.hs  UCB.hs  Util.hs
hbandit/tests/Bandit/: UtilTest.hs
hsnrm/: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .hlint.yaml  Makefile  cabal.project  common.dhall  default.nix  hie.yaml  hsnrm-static.cabal  hsnrm-static.dhall  hsnrm.cabal  hsnrm.dhall  hsnrm.nix  nrm-core-module.cabal  shell.nix
hsnrm-bin/: Export.hs  Hnrm.hs  hsnrm-bin.cabal
hsnrm-extra/: PyExport.hs  hsnrm-extra.cabal
hsnrm/app/: Export.hs
hsnrm/dhall/: common.dhall  dynamic.dhall  execs.dhall  gen.dhall  static.dhall
hsnrm/dhall/types/: manifest.dhall
hsnrm/glpk/: glpk.c
hsnrm/hsnrm/: hsnrm.cabal  hsnrm.dhall
hsnrm/hsnrm-bin/: Codegen.hs  Export.hs  Hnrm.hs  hsnrm-bin.cabal  hsnrm-bin.dhall
hsnrm/hsnrm-extra/: .gitignore  PyExport.hs  hsnrm-extra.cabal  hsnrm-extra.dhall
hsnrm/hsnrm-static/: hsnrm-static.cabal  hsnrm-static.dhall
hsnrm/hsnrm/dhall/defaults/: manifest.dhall  nrmd.dhall
hsnrm/hsnrm/dhall/types/: manifest.dhall  nrmd.dhall
hsnrm/hsnrm/src/CPD/: Core.hs  Integrated.hs  Utils.hs
hsnrm/hsnrm/src/Codegen/: CHeader.hs  Dhall.hs
hsnrm/hsnrm/src/LMap/: Map.hs  NonEmpty.hs
hsnrm/hsnrm/src/LensMap/: Core.hs
hsnrm/hsnrm/src/NRM/: Actuators.hs  Behavior.hs  CPD.hs  Client.hs  Codegen.hs  Control.hs  Export.hs  ExportIO.hs  Messaging.hs  Optparse.hs  Sensors.hs  State.hs  Version.hs
hsnrm/nrm/: Nrm.hs
hsnrm/nrm/Algebra/: Classes.hs
hsnrm/nrm/Bandit/: Class.hs  EpsGreedy.hs  Exp3.hs  Util.hs
hsnrm/nrm/CPD/: Core.hs  Integrated.hs  Text.hs  Utils.hs  Values.hs
hsnrm/nrm/Codegen/: CHeader.hs  Dhall.hs  Schema.hs
hsnrm/nrm/Control/Monad/: LPMonad.hs
hsnrm/nrm/Data/: LinearProgram.hs
hsnrm/nrm/Data/LinearProgram/: Common.hs  GLPK.hs  LinExpr.hs  Spec.hs  Types.hs
hsnrm/nrm/FFI/: LICENSE  TH.hs  TypeUncurry.hs
hsnrm/nrm/FFI/TypeUncurry/: DataKinds.hs  Msgpack.hs
hsnrm/nrm/LMap/: Map.hs  NonEmpty.hs
hsnrm/nrm/LensMap/: Core.hs  Examples.hs
hsnrm/nrm/NRM/: Actuators.hs  Behavior.hs  CPD.hs  Client.hs  Codegen.hs  Control.hs  Daemon.hs  Export.hs  ExportIO.hs  Messaging.hs  NRMState.hs  Optparse.hs  Processes.hs  Sensors.hs  Slices.hs  State.hs  Version.hs
hsnrm/nrm/NRM/Classes/: Actuators.hs  Examples.hs  Messaging.hs  Sensors.hs  Topology.hs
hsnrm/nrm/NRM/Configuration/: Examples.hs
hsnrm/nrm/NRM/Manifest/: Examples.hs
hsnrm/nrm/NRM/Node/: Hwloc.hs  Sysfs.hs
hsnrm/nrm/NRM/Optparse/: Client.hs  Daemon.hs
hsnrm/nrm/NRM/Orphans/: Dhall.hs  ExitCode.hs  NonEmpty.hs  Refined.hs  UUID.hs  ZeroOne.hs
hsnrm/nrm/NRM/Slices/: Class.hs  Dummy.hs  Nodeos.hs  Singularity.hs
hsnrm/nrm/NRM/Types/: Actuator.hs  Behavior.hs  CPDL.hs  Cmd.hs  CmdID.hs  Configuration.hs  Controller.hs  DownstreamClient.hs  DownstreamCmd.hs  DownstreamCmdClient.hs  DownstreamCmdID.hs  DownstreamThread.hs  DownstreamThreadClient.hs  DownstreamThreadID.hs  Downstreamclient.hs  LMap.hs  Manifest.hs  MemBuffer.hs  Metadata.hs  NRM.hs  NRMState.hs  Process.hs  Sensor.hs  Slice.hs  State.hs  Topology.hs  Units.hs  UpstreamClient.hs
hsnrm/nrm/Nrm/: Behavior.hs  Client.hs  Codegen.hs  Configuration.hs  Containers.hs  Control.hs  Daemon.hs  Export.hs  NrmState.hs  Optparse.hs  Processes.hs  Server.hs  Version.hs
hsnrm/nrm/Nrm/Argparse/: Client.hs  Daemon.hs
hsnrm/nrm/Nrm/Classes/: Messaging.hs  Topology.hs
hsnrm/nrm/Nrm/Containers/: Class.hs  Dummy.hs  Nodeos.hs  Singularity.hs
hsnrm/nrm/Nrm/Messaging/: Downstream.hs  Upstream.hs  UpstreamPub.hs  UpstreamRep.hs  UpstreamReq.hs
hsnrm/nrm/Nrm/Node/: Hwloc.hs  Sysfs.hs
hsnrm/nrm/Nrm/Optparse/: Client.hs  Daemon.hs
hsnrm/nrm/Nrm/Orphans/: ExitCode.hs
hsnrm/nrm/Nrm/Types/: Actuator.hs  Application.hs  Applications.hs  Client.hs  Configuration.hs  Container.hs  Containers.hs  DownstreamClient.hs  Manifest.hs  (+8 more)
hsnrm/resources/: downstreamEvent.json  manifestSchema.json  upstreamPub.json  upstreamRep.json  upstreamReq.json
hsnrm/resources/defaults/: Cfg.dhall  Cfg.json  Cfg.yaml  Manifest.dhall
hsnrm/resources/example-configurations/: control.dhall  control.json  control.yaml  default.dhall  default.json  default.yaml  extra-static-actuator.dhall  extra-static-actuator.json  extra-static-actuator.yaml  extra-static-sensor.dhall  extra-static-sensor.json  extra-static-sensor.yaml  variorum-two-package-power-limit-sensor.dhall  variorum-two-package-power-limit-sensor.json  variorum-two-package-power-limit-sensor.yaml  variorum-two-package-power-limits-actuator.dhall  variorum-two-package-power-limits-actuator.json  variorum-two-package-power-limits-actuator.yaml  variorum-two-package-power-value-sensor.dhall  variorum-two-package-power-value-sensor.json  variorum-two-package-power-value-sensor.yaml
hsnrm/resources/example-manifests/: libnrm.dhall  libnrm.yaml  perfwrap.dhall
hsnrm/resources/examples/: perfwrap.dhall  perfwrap.json
hsnrm/resources/types/: CPDActions.dhall  Cfg.dhall  Manifest.dhall
hsnrm/src/CPD/: Core.hs  Integrated.hs  Text.hs  Utils.hs  Values.hs
hsnrm/src/Codegen/: CHeader.hs  Schema.hs
hsnrm/src/LensMap/: Core.hs
hsnrm/src/NRM/: Actuators.hs  Behavior.hs  CPD.hs  Client.hs  Codegen.hs  Control.hs  Daemon.hs  Export.hs  ExportIO.hs  Messaging.hs  Optparse.hs  Processes.hs  Sensors.hs  Slices.hs  State.hs  Version.hs
hsnrm/src/Nrm/: Containers.hs
(+789 files in other folders)
