cabal-version: 2.0
name: hbandit
version: 1.0.0
license: BSD3
maintainer: swann@anl.gov
author: Valentin Reis, Swann Perarnau
synopsis: hbandit
description:
    hbandit
category: algorithms
build-type: Simple
extra-doc-files: literate/*.png

source-repository head

library
    exposed-modules:
        Bandit
        Bandit.Class
        Bandit.EpsGreedy
        Bandit.Exp3
        Bandit.Exp4R
        Bandit.Types
        Bandit.Tutorial
        Bandit.Util
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: LambdaCase QuasiQuotes DefaultSignatures
                        ExistentialQuantification RecordWildCards TypeSynonymInstances
                        StandaloneDeriving FlexibleInstances TupleSections
                        MultiParamTypeClasses NoImplicitPrelude OverloadedStrings
                        OverloadedLists ViewPatterns OverloadedLabels DeriveFunctor
                        TypeFamilies DeriveAnyClass DeriveGeneric DeriveDataTypeable
                        DeriveFoldable DerivingStrategies TypeApplications MultiWayIf
                        TemplateHaskell BlockArguments GADTs FlexibleContexts TypeOperators
                        DataKinds PolyKinds AllowAmbiguousTypes FunctionalDependencies
                        UndecidableInstances
    ghc-options: -Wall -O0 -Wcompat -Wincomplete-uni-patterns
                 -Widentities -Wredundant-constraints -Wcpp-undef -fwarn-tabs
                 -fwarn-unused-imports -fwarn-missing-signatures
                 -fwarn-name-shadowing -fprint-potential-instances
                 -fwarn-unused-do-bind -fwarn-wrong-do-bind
                 -fwarn-incomplete-patterns -Wincomplete-record-updates
                 -Wmonomorphism-restriction -Wimplicit-prelude
                 -Wmissing-local-signatures -Wmissing-exported-signatures
                 -Wmissing-export-lists -Wmissing-home-modules -Widentities
                 -Wredundant-constraints -Wpartial-fields
    build-depends:
        base -any,
        protolude -any,
        random -any,
        refined -any,
        intervals -any,
        MonadRandom -any,
        lens -any,
        generic-lens -any

test-suite test
    type: exitcode-stdio-1.0
    main-is: ctx.hs
    hs-source-dirs: test
    default-language: Haskell2010
    default-extensions: LambdaCase QuasiQuotes DefaultSignatures
                        ExistentialQuantification RecordWildCards TypeSynonymInstances
                        StandaloneDeriving FlexibleInstances TupleSections
                        MultiParamTypeClasses NoImplicitPrelude OverloadedStrings
                        OverloadedLists ViewPatterns OverloadedLabels DeriveFunctor
                        TypeFamilies DeriveAnyClass DeriveGeneric DeriveDataTypeable
                        DeriveFoldable DerivingStrategies TypeApplications MultiWayIf
                        TemplateHaskell BlockArguments GADTs FlexibleContexts TypeOperators
                        DataKinds PolyKinds AllowAmbiguousTypes FunctionalDependencies
                        UndecidableInstances
    ghc-options: -Wall -O0 -Wcompat -Wincomplete-uni-patterns
                 -Widentities -Wredundant-constraints -Wcpp-undef -fwarn-tabs
                 -fwarn-unused-imports -fwarn-missing-signatures
                 -fwarn-name-shadowing -fprint-potential-instances
                 -fwarn-unused-do-bind -fwarn-wrong-do-bind
                 -fwarn-incomplete-patterns -Wincomplete-record-updates
                 -Wmonomorphism-restriction -Wimplicit-prelude
                 -Wmissing-local-signatures -Wmissing-exported-signatures
                 -Wmissing-export-lists -Wmissing-home-modules -Widentities
                 -Wredundant-constraints -Wpartial-fields
    build-depends:
        base -any,
        protolude -any,
        random -any,
        refined -any,
        intervals -any,
        MonadRandom -any,
        lens -any,
        generic-lens -any,
        hbandit -any
