cabal-version: 2.0
name: hsnrm-bin
version: 1.0.0
license: BSD3
maintainer: fre@freux.fr
author: Valentin Reis
synopsis: hsnrm
description:
    The Node Resource Manager(NRM) is a linux daemon that enables dynamic resource optimization for improving the power/performance tradeoff of HPC applications.
category: tools
build-type: Simple

source-repository head
    type: git
    location: https://xgitlab.cels.anl.gov/vreis/hsnrm.git

foreign-library nrm-core
    type: native-shared
-- do not remove: modified when we need to build standalone binaries
    options:
    other-modules: Export
    default-language: Haskell2010
    default-extensions: LambdaCase QuasiQuotes DefaultSignatures
                        OverloadedLists ExistentialQuantification RecordWildCards
                        RankNTypes TypeSynonymInstances StandaloneDeriving NamedFieldPuns
                        FlexibleInstances TupleSections ScopedTypeVariables
                        MultiParamTypeClasses NoImplicitPrelude OverloadedStrings
                        ViewPatterns PatternSynonyms DeriveFunctor DeriveTraversable
                        TypeFamilies DeriveAnyClass DeriveGeneric DeriveDataTypeable
                        OverloadedLabels DeriveFoldable DerivingStrategies TypeApplications
                        MultiWayIf NoTemplateHaskell BlockArguments GADTs FlexibleContexts
                        TypeOperators DataKinds PolyKinds AllowAmbiguousTypes
                        FunctionalDependencies UndecidableInstances
    ghc-options: -Wall -O0 -Wcompat -Wincomplete-uni-patterns
                 -Wmissing-home-modules -Widentities -Wredundant-constraints
                 -Wcpp-undef -fwarn-tabs -fwarn-unused-imports
                 -fwarn-missing-signatures -fwarn-name-shadowing
                 -fprint-potential-instances -Wmissing-export-lists
                 -fwarn-unused-do-bind -fwarn-wrong-do-bind
                 -fwarn-incomplete-patterns -Wincomplete-record-updates
                 -Wmonomorphism-restriction -Wimplicit-prelude
                 -Wmissing-local-signatures -Wmissing-exported-signatures
                 -Wmissing-export-lists -Wmissing-home-modules -Widentities
                 -Wredundant-constraints -Wpartial-fields -Wmissed-specialisations
                 -Wall-missed-specialisations
    build-depends:
        hsnrm -any,
        base -any,
        protolude -any,
        enclosed-exceptions -any

executable nrm
    main-is: Hnrm.hs
    default-language: Haskell2010
    default-extensions: LambdaCase QuasiQuotes DefaultSignatures
                        OverloadedLists ExistentialQuantification RecordWildCards
                        RankNTypes TypeSynonymInstances StandaloneDeriving NamedFieldPuns
                        FlexibleInstances TupleSections ScopedTypeVariables
                        MultiParamTypeClasses NoImplicitPrelude OverloadedStrings
                        ViewPatterns PatternSynonyms DeriveFunctor DeriveTraversable
                        TypeFamilies DeriveAnyClass DeriveGeneric DeriveDataTypeable
                        OverloadedLabels DeriveFoldable DerivingStrategies TypeApplications
                        MultiWayIf NoTemplateHaskell BlockArguments GADTs FlexibleContexts
                        TypeOperators DataKinds PolyKinds AllowAmbiguousTypes
                        FunctionalDependencies UndecidableInstances
    ghc-options: -Wall -O0 -Wcompat -Wincomplete-uni-patterns
                 -Wmissing-home-modules -Widentities -Wredundant-constraints
                 -Wcpp-undef -fwarn-tabs -fwarn-unused-imports
                 -fwarn-missing-signatures -fwarn-name-shadowing
                 -fprint-potential-instances -Wmissing-export-lists
                 -fwarn-unused-do-bind -fwarn-wrong-do-bind
                 -fwarn-incomplete-patterns -Wincomplete-record-updates
                 -Wmonomorphism-restriction -Wimplicit-prelude
                 -Wmissing-local-signatures -Wmissing-exported-signatures
                 -Wmissing-export-lists -Wmissing-home-modules -Widentities
                 -Wredundant-constraints -Wpartial-fields -main-is Hnrm
    build-depends:
        hsnrm -any

