cabal-version: 2.0
name: hsnrm-extra
version: 0.2.0
license: BSD3
maintainer: swann@anl.gov
author: Valentin Reis, Swann Perarnau
synopsis: hsnrm-extra
description:
    hsnrm utilities
category: tools
build-type: Simple

source-repository head
    type: git
    location: https://github.com/anlsys/nrm-core.git

foreign-library nrm-core-python
    type: native-shared
-- do not remove: modified when we need to build binaries
    options:
    other-modules: PyExport
    default-language: Haskell2010
    default-extensions: LambdaCase QuasiQuotes DefaultSignatures
                        OverloadedLists ExistentialQuantification RecordWildCards
                        RankNTypes TypeSynonymInstances StandaloneDeriving NamedFieldPuns
                        FlexibleInstances TupleSections ScopedTypeVariables
                        MultiParamTypeClasses NoImplicitPrelude OverloadedStrings
                        ViewPatterns PatternSynonyms DeriveFunctor DeriveTraversable
                        TypeFamilies DeriveAnyClass DeriveGeneric DeriveDataTypeable
                        OverloadedLabels DeriveFoldable DerivingStrategies TypeApplications
                        MultiWayIf NoTemplateHaskell BlockArguments GADTs FlexibleContexts
                        TypeOperators DataKinds PolyKinds AllowAmbiguousTypes
                        FunctionalDependencies UndecidableInstances
    ghc-options: -Wall -O0 -Wcompat -Wincomplete-uni-patterns
                 -Wmissing-home-modules -Widentities -Wredundant-constraints
                 -Wcpp-undef -fwarn-tabs -fwarn-unused-imports
                 -fwarn-missing-signatures -fwarn-name-shadowing
                 -fprint-potential-instances -Wmissing-export-lists
                 -fwarn-unused-do-bind -fwarn-wrong-do-bind
                 -fwarn-incomplete-patterns -Wincomplete-record-updates
                 -Wmonomorphism-restriction -Wimplicit-prelude
                 -Wmissing-local-signatures -Wmissing-exported-signatures
                 -Wmissing-export-lists -Wmissing-home-modules -Widentities
                 -Wredundant-constraints -Wpartial-fields -Wmissed-specialisations
                 -Wall-missed-specialisations
    build-depends:
        hsnrm -any,
        base -any,
        protolude -any,
        containers -any,
        aeson -any,
        zeromq4-haskell -any,
        pretty-simple -any,
        data-default -any,
        bytestring -any,
        enclosed-exceptions -any
