cabal-version: 2.0
name: hsnrm
version: 1.0.0
license: BSD3
maintainer: swann@anl.gov
author: Valentin Reis, Swann Perarnau
synopsis: hsnrm
description:
    The Node Resource Manager(NRM) is a linux daemon that enables dynamic resource optimization for improving the power/performance tradeoff of HPC applications.
    This is the core nrm haskell module containing most of the NRM logic.
category: tools
build-type: Simple

extra-source-files:
  dhall/defaults/*.dhall
  dhall/types/*.dhall

source-repository head
    type: git
    location: https://github.com/anlsys/nrm-core.git

library
    exposed-modules:
        NRM.Slices
        NRM.Slices.Class
        NRM.Slices.Nodeos
        NRM.Slices.Singularity
        NRM.Slices.Dummy
        NRM.Node.Hwloc
        NRM.Node.Sysfs
        NRM.Control
        NRM.Codegen
        NRM.Export
        NRM.ExportIO
        NRM.Client
        NRM.Daemon
        NRM.CPD
        NRM.Optparse
        NRM.Behavior
        NRM.Version
        NRM.Sensors
        NRM.Actuators
        NRM.Messaging
        NRM.Processes
        NRM.State
        NRM.Node.Sysfs.Internal
        NRM.Optparse.Client
        NRM.Optparse.Daemon
        NRM.Types.Topology
        NRM.Types.Topology.Package
        NRM.Types.Topology.Core
        NRM.Types.Topology.PU
        NRM.Types.Topology.PackageID
        NRM.Types.Topology.CoreID
        NRM.Types.Topology.PUID
        NRM.Types.Units
        NRM.Types.Controller
        NRM.Types.Actuator
        NRM.Types.Sensor
        NRM.Types.Behavior
        NRM.Types.Slice
        NRM.Types.Cmd
        NRM.Types.CmdID
        NRM.Types.NRM
        NRM.Types.Process
        NRM.Types.DownstreamThread
        NRM.Types.DownstreamThreadID
        NRM.Types.DownstreamCmd
        NRM.Types.DownstreamCmdID
        NRM.Types.State
        NRM.Types.MemBuffer
        NRM.Types.UpstreamClient
        NRM.Types.DownstreamClient
        NRM.Classes.Messaging
        NRM.Classes.Sensors
        NRM.Classes.Actuators
        NRM.Classes.Topology
        NRM.Orphans.ExitCode
        NRM.Orphans.UUID
        NRM.Orphans.Dhall
        NRM.Orphans.NonEmpty
        NRM.Orphans.ZeroOne
        NRM.Orphans.Refined
        NRM.Types.Messaging.DownstreamEvent
        NRM.Types.Messaging.UpstreamPub
        NRM.Types.Messaging.UpstreamReq
        NRM.Types.Messaging.UpstreamRep
        NRM.Types.Messaging.Protocols
        NRM.Types.Configuration
        NRM.Types.Manifest
        FFI.TypeUncurry
        FFI.TypeUncurry.Msgpack
        FFI.TypeUncurry.DataKinds
        Codegen.Schema
        Codegen.CHeader
        LensMap.Core
        CPD.Core
        CPD.Integrated
        CPD.Values
        CPD.Utils
        CPD.Text
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: LambdaCase QuasiQuotes DefaultSignatures
                        OverloadedLists ExistentialQuantification RecordWildCards
                        RankNTypes TypeSynonymInstances StandaloneDeriving NamedFieldPuns
                        FlexibleInstances TupleSections ScopedTypeVariables
                        MultiParamTypeClasses NoImplicitPrelude OverloadedStrings
                        ViewPatterns PatternSynonyms DeriveFunctor DeriveTraversable
                        TypeFamilies DeriveAnyClass DeriveGeneric DeriveDataTypeable
                        OverloadedLabels DeriveFoldable DerivingStrategies TypeApplications
                        MultiWayIf NoTemplateHaskell BlockArguments GADTs FlexibleContexts
                        TypeOperators DataKinds PolyKinds AllowAmbiguousTypes
                        FunctionalDependencies UndecidableInstances NumericUnderscores
    ghc-options: -Wall -O0 -Wcompat -Wincomplete-uni-patterns
                 -Wmissing-home-modules -Widentities -Wredundant-constraints
                 -Wcpp-undef -fwarn-tabs -fwarn-unused-imports
                 -fwarn-missing-signatures -fwarn-name-shadowing
                 -fprint-potential-instances -Wmissing-export-lists
                 -fwarn-unused-do-bind -fwarn-wrong-do-bind
                 -fwarn-incomplete-patterns -Wincomplete-record-updates
                 -Wmonomorphism-restriction -Wimplicit-prelude
                 -Wmissing-local-signatures -Wmissing-exported-signatures
                 -Wmissing-export-lists -Wmissing-home-modules -Widentities
                 -Wredundant-constraints -Wpartial-fields
    build-depends:
        aeson 			== 1.4.6.0,
        aeson-extra 		== 0.4.1.3,
        aeson-pretty 		== 0.8.8,
        async 			== 2.2.2,
        base			== 4.12.0.0,
        binary 			== 0.8.6.0,
        brick 			== 0.47.1,
        bytestring 		== 0.10.8.2,
        conduit 		== 1.3.1.2,
        conduit-extra 		== 1.3.4,
        containers 		== 0.5.11.0,
        data-default 		== 0.7.1.1,
        data-msgpack 		== 0.0.12,
        dhall 			== 1.30.0,
        dhall-json 		== 1.6.2,
        directory 		== 1.3.3.0,
        either 			== 5.0.1.1,
        enclosed-exceptions 	== 1.0.3,
        filepath 		== 1.4.2.1,
        flat 			== 0.3.4,
        generic-aeson 		== 0.2.0.10,
        generic-data 		== 0.7.0.0,
        generic-deriving 	== 1.12.4,
        generic-lens 		== 1.1.0.0,
        hashable                == 1.2.7.0,
        hbandit 		== 1.0.0,
        hxt 			== 9.3.1.18,
        hxt-xpath 		== 9.1.2.2,
        intervals 		== 0.8.1,
        iso-deriving 		== 0.0.8,
        json-schema 		== 0.7.4.2,
        lens 			== 4.17.1,
        linear                  == 1.20.9,
        megaparsec 		== 7.0.5,
        MonadRandom 		== 0.5.1.2,
        mtl 			== 2.2.2,
        mtl-compat 		== 0.2.2,
        neat-interpolation 	== 0.3.2.6,
        optparse-applicative 	== 0.14.3.0,
        prettyprinter 		== 1.6.0,
        pretty-simple 		== 2.2.0.1,
        protolude 		== 0.2.3,
        random 			== 1.1,
        recursion-schemes 	== 5.1.3,
        refined 		== 0.4.4,
        regex 			== 1.0.2.0,
        resourcet 		== 1.2.2,
        scientific 		== 0.3.6.2,
        semigroupoids           == 5.3.4,
        storable-endian 	== 0.2.6,
        text 			== 1.2.3.1,
        th-abstraction          == 0.3.1.0,
        th-desugar              == 1.9,
        th-expand-syns          == 0.4.5.0,
        transformers 		== 0.5.6.2,
        typed-process 		== 0.2.6.0,
        units 			== 2.4.1.2,
        units-defs		== 2.1.0.1,
        unix 			== 2.7.2.2,
        unliftio-core           == 0.1.2.0,
        unordered-containers	== 0.2.10.0,
        uuid 			== 1.3.13,
        uuid-types              == 1.0.3,
        vcs-revision 		== 0.0.2,
        vector 			== 0.12.1.2,
        yaml 			== 0.11.2.0,
        zeromq4-conduit 	== 0.1.0.0,
        zeromq4-haskell 	== 0.8.0
