cabal-version: 2.0
name: hsnrm-extra
version: 1.0.0
license: BSD3
maintainer: fre@freux.fr
author: Valentin Reis
synopsis: hsnrm-extra
description:
    hsnrm utilities
category: tools
build-type: Simple

source-repository head
    type: git
    location: https://xgitlab.cels.anl.gov/vreis/hsnrm.git

executable pynrm.so
    main-is: PyExport.hs
    default-language: Haskell2010
    default-extensions: LambdaCase QuasiQuotes DefaultSignatures
                        OverloadedLists ExistentialQuantification RecordWildCards
                        RankNTypes TypeSynonymInstances StandaloneDeriving NamedFieldPuns
                        FlexibleInstances TupleSections ScopedTypeVariables
                        MultiParamTypeClasses NoImplicitPrelude OverloadedStrings
                        ViewPatterns PatternSynonyms DeriveFunctor DeriveTraversable
                        TypeFamilies DeriveAnyClass DeriveGeneric DeriveDataTypeable
                        OverloadedLabels DeriveFoldable DerivingStrategies TypeApplications
                        MultiWayIf NoTemplateHaskell BlockArguments GADTs FlexibleContexts
                        TypeOperators DataKinds PolyKinds AllowAmbiguousTypes
                        FunctionalDependencies UndecidableInstances
    extra-lib-dirs: /nix/store/lz67bgzcwjf8wf23j2cb69g01pa7x4sf-ghc-8.6.5/lib/ghc-8.6.5/rts/
    ghc-options: -Wall -O0 -Wcompat -Wincomplete-uni-patterns
                 -Wmissing-home-modules -Widentities -Wredundant-constraints
                 -Wcpp-undef -fwarn-tabs -fwarn-unused-imports
                 -fwarn-missing-signatures -fwarn-name-shadowing
                 -fprint-potential-instances -Wmissing-export-lists
                 -fwarn-unused-do-bind -fwarn-wrong-do-bind
                 -fwarn-incomplete-patterns -Wincomplete-record-updates
                 -Wmonomorphism-restriction -Wimplicit-prelude
                 -Wmissing-local-signatures -Wmissing-exported-signatures
                 -Wmissing-export-lists -Wmissing-home-modules -Widentities
                 -Wredundant-constraints -Wpartial-fields -Wmissed-specialisations
                 -Wall-missed-specialisations -fPIC -shared -no-hs-main -dynamic
                 -lHSrts-ghc8.6.5
    build-depends:
        hsnrm -any,
        base -any,
        protolude -any,
        containers -any,
        aeson -any,
        zeromq4-haskell -any,
        pretty-simple -any,
        data-default -any,
        bytestring -any,
        enclosed-exceptions -any

