cabal-version: 2.0
name: hsnrm
version: 1.0.0
license: BSD3
maintainer: fre@freux.fr
author: Valentin Reis
synopsis: hsnrm
description:
    The Node Resource Manager(NRM) is a linux daemon that enables dynamic resource optimization for improving the power/performance tradeoff of HPC applications.
category: tools
build-type: Simple

source-repository head
    type: git
    location: https://xgitlab.cels.anl.gov/vreis/hsnrm.git

