cabal-version: 2.0
name: hsnrm
version: 1.0.0
license: BSD3
maintainer: fre@freux.fr
author: Valentin Reis
synopsis: hsnrm
description:
    The Node Resource Manager(NRM) is a linux daemon that enables dynamic resource optimization for improving the power/performance tradeoff of HPC applications.
category: tools
build-type: Simple

extra-source-files:
  dhall/defaults/*.dhall
  dhall/types/*.dhall

source-repository head
    type: git
    location: https://xgitlab.cels.anl.gov/vreis/hsnrm.git

library
    exposed-modules:
        NRM.Slices
        NRM.Slices.Class
        NRM.Slices.Nodeos
        NRM.Slices.Singularity
        NRM.Slices.Dummy
        NRM.Node.Hwloc
        NRM.Node.Sysfs
        NRM.Control
        NRM.Codegen
        NRM.Export
        NRM.ExportIO
        NRM.Client
        NRM.Daemon
        NRM.CPD
        NRM.Optparse
        NRM.Behavior
        NRM.Version
        NRM.Sensors
        NRM.Actuators
        NRM.Messaging
        NRM.Processes
        NRM.State
        NRM.Node.Sysfs.Internal
        NRM.Optparse.Client
        NRM.Optparse.Daemon
        NRM.Types.Topology
        NRM.Types.Topology.Package
        NRM.Types.Topology.Core
        NRM.Types.Topology.PU
        NRM.Types.Topology.PackageID
        NRM.Types.Topology.CoreID
        NRM.Types.Topology.PUID
        NRM.Types.Units
        NRM.Types.Controller
        NRM.Types.Actuator
        NRM.Types.Sensor
        NRM.Types.Behavior
        NRM.Types.Slice
        NRM.Types.Cmd
        NRM.Types.CmdID
        NRM.Types.NRM
        NRM.Types.Process
        NRM.Types.DownstreamThread
        NRM.Types.DownstreamThreadID
        NRM.Types.DownstreamCmd
        NRM.Types.DownstreamCmdID
        NRM.Types.State
        NRM.Types.MemBuffer
        NRM.Types.UpstreamClient
        NRM.Types.DownstreamClient
        NRM.Classes.Messaging
        NRM.Classes.Sensors
        NRM.Classes.Actuators
        NRM.Classes.Topology
        NRM.Orphans.ExitCode
        NRM.Orphans.UUID
        NRM.Orphans.Dhall
        NRM.Orphans.NonEmpty
        NRM.Orphans.ZeroOne
        NRM.Orphans.Refined
        NRM.Types.Messaging.DownstreamEvent
        NRM.Types.Messaging.UpstreamPub
        NRM.Types.Messaging.UpstreamReq
        NRM.Types.Messaging.UpstreamRep
        NRM.Types.Messaging.Protocols
        NRM.Types.Configuration
        NRM.Types.Manifest
        FFI.TypeUncurry
        FFI.TypeUncurry.Msgpack
        FFI.TypeUncurry.DataKinds
        Codegen.Schema
        Codegen.CHeader
        LensMap.Core
        CPD.Core
        CPD.Integrated
        CPD.Values
        CPD.Utils
        CPD.Text
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: LambdaCase QuasiQuotes DefaultSignatures
                        OverloadedLists ExistentialQuantification RecordWildCards
                        RankNTypes TypeSynonymInstances StandaloneDeriving NamedFieldPuns
                        FlexibleInstances TupleSections ScopedTypeVariables
                        MultiParamTypeClasses NoImplicitPrelude OverloadedStrings
                        ViewPatterns PatternSynonyms DeriveFunctor DeriveTraversable
                        TypeFamilies DeriveAnyClass DeriveGeneric DeriveDataTypeable
                        OverloadedLabels DeriveFoldable DerivingStrategies TypeApplications
                        MultiWayIf NoTemplateHaskell BlockArguments GADTs FlexibleContexts
                        TypeOperators DataKinds PolyKinds AllowAmbiguousTypes
                        FunctionalDependencies UndecidableInstances NumericUnderscores
    ghc-options: -Wall -O0 -Wcompat -Wincomplete-uni-patterns
                 -Wmissing-home-modules -Widentities -Wredundant-constraints
                 -Wcpp-undef -fwarn-tabs -fwarn-unused-imports
                 -fwarn-missing-signatures -fwarn-name-shadowing
                 -fprint-potential-instances -Wmissing-export-lists
                 -fwarn-unused-do-bind -fwarn-wrong-do-bind
                 -fwarn-incomplete-patterns -Wincomplete-record-updates
                 -Wmonomorphism-restriction -Wimplicit-prelude
                 -Wmissing-local-signatures -Wmissing-exported-signatures
                 -Wmissing-export-lists -Wmissing-home-modules -Widentities
                 -Wredundant-constraints -Wpartial-fields
    build-depends:
        process -any,
        base -any,
        hbandit -any,
        either -any,
        protolude -any,
        scientific -any,
        megaparsec -any,
        enclosed-exceptions -any,
        MonadRandom -any,
        mtl-compat -any,
        vcs-revision -any,
        transformers -any,
        generic-data -any,
        bytestring -any,
        iso-deriving -any,
        random -any,
        prettyprinter -any,
        zeromq4-haskell -any,
        zeromq4-conduit -any,
        generic-lens -any,
        data-msgpack -any,
        containers -any,
        binary -any,
        unordered-containers -any,
        mtl -any,
        aeson -any,
        dhall >= 1.30.0,
        dhall-json -any,
        conduit -any,
        conduit-extra -any,
        aeson-extra -any,
        resourcet -any,
        intervals -any,
        neat-interpolation -any,
        generic-aeson -any,
        aeson-pretty -any,
        pretty-simple -any,
        typed-process -any,
        hxt -any,
        recursion-schemes -any,
        hxt-xpath -any,
        json-schema -any,
        yaml -any,
        data-default -any,
        flat -any,
        refined -any,
        vector -any,
        optparse-applicative -any,
        directory -any,
        regex -any,
        units -any,
        unix -any,
        generic-deriving -any,
        uuid -any,
        async -any,
        text -any,
        units-defs -any,
        storable-endian -any,
        template-haskell -any,
        mtl -any,
        brick -any,
        filepath -any,
        lens -any

test-suite discover
    type: exitcode-stdio-1.0
    main-is: Driver.hs
    hs-source-dirs: tests
    other-modules:
        Test.CPD.Integrated
    default-language: Haskell2010
    default-extensions: LambdaCase QuasiQuotes DefaultSignatures
                        OverloadedLists ExistentialQuantification RecordWildCards
                        RankNTypes TypeSynonymInstances StandaloneDeriving NamedFieldPuns
                        FlexibleInstances TupleSections ScopedTypeVariables
                        MultiParamTypeClasses NoImplicitPrelude OverloadedStrings
                        ViewPatterns PatternSynonyms DeriveFunctor DeriveTraversable
                        TypeFamilies DeriveAnyClass DeriveGeneric DeriveDataTypeable
                        OverloadedLabels DeriveFoldable DerivingStrategies TypeApplications
                        MultiWayIf NoTemplateHaskell BlockArguments GADTs FlexibleContexts
                        TypeOperators DataKinds PolyKinds AllowAmbiguousTypes
                        FunctionalDependencies UndecidableInstances
    ghc-options: -Wall -O0 -Wcompat -Wincomplete-uni-patterns
                 -Wmissing-home-modules -Widentities -Wredundant-constraints
                 -Wcpp-undef -fwarn-tabs -fwarn-unused-imports
                 -fwarn-missing-signatures -fwarn-name-shadowing
                 -fprint-potential-instances -Wmissing-export-lists
                 -fwarn-unused-do-bind -fwarn-wrong-do-bind
                 -fwarn-incomplete-patterns -Wincomplete-record-updates
                 -Wmonomorphism-restriction -Wimplicit-prelude
                 -Wmissing-local-signatures -Wmissing-exported-signatures
                 -Wmissing-export-lists -Wmissing-home-modules -Widentities
                 -Wredundant-constraints -Wpartial-fields -threaded
    build-depends:
        base -any,
        protolude -any,
        hsnrm -any,
        tasty-hunit -any,
        tasty -any,
        tasty-discover -any

